<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Verse Mem</string>
    <string name="edit_verse_button">Edit</string>
    <string name="delete">Delete</string>
    <string name="merge">Merge</string>
    <string name="save_button">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog">Delete Verse?</string>
    <string name="action_quiz">Quiz</string>
    <string name="title_activity_quiz">Verse Practice</string>
    <string name="record_button">Record</string>
    <string name="rerecord_button">Re-Record</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="stop_recording">Done</string>
    <string name="submit_quiz_button">Submit</string>
    <string name="quiz_success">Good,</string>
    <string name="in_a_row">in a row!</string>
    <string name="quiz_failure_auto">Not quite. Would you like to try again?</string>
    <string name="quiz_failure_manual">Sorry. Would you like to try again?</string>
    <string name="multiverse">Multiple Verses</string>
    <string name="colon">:</string>
    <string name="dash">-</string>
    <string name="action_new_verse">New Verse</string>
    <string name="title_activity_new_verse">Download a New Verse</string>
    <string name="get_verse_button">View</string>
    <string name="add_verse_button">Save</string>
    <string name="action_settings">Settings</string>
    <string name="pref_translation">Translation</string>
    <string name="pref_translation_default">2</string>
    <string name="user_answer">You put:</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="right_button">Right</string>
    <string name="wrong_button">Wrong</string>
    <string name="new_quiz_button">Practice Another</string>
    <string name="requiz_button">Try Again</string>
    <string name="go_to_list_button">Verse List</string>

    <string-array name="pref_translation_values">
        <item>2</item>
    </string-array>
    <string-array name="pref_translations">
        <item>King James Version</item>
    </string-array>

    <string name="pref_notification_number">Daily Notifications</string>
    <string name="pref_notification_number_default">2</string>

    <string-array name="pref_notification_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_notification_time">Notification Time</string>
    <string name="pref_notification_vibrate">Vibrate on Notifications</string>
    <string name="pref_notification_led">LED on Notifications</string>
    <string name="pref_quiz_style">Practice Checker</string>
    <string name="pref_quiz_style_default">Keyboard Auto-Check</string>

    <string-array name="pref_quiz_styles">
        <item>Keyboard Auto-Check</item>
        <item>Keyboard Self-Check</item>
        <item>Microphone Self-Check</item>
        <item>No Input</item>
    </string-array>

    <string name="pref_auto_merge">Automatically Combine Adjacent Verses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_quiz_result">QuizResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_verse_view">VerseViewActivity</string>

</resources>
