<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
           
    <LinearLayout 
        android:id="@+id/answer_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        
	     <TextView
	        android:id="@+id/right_answer_text"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:text="" 
	        android:textColor="#669900" />
	     
	     <TextView
	        android:id="@+id/user_answer_text"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:text=""
	        android:textColor="#0099cc" />
    </LinearLayout>

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/answer_layout"
        android:onClick="showResult"
        android:text="@string/right_button" />
    
    <Button
        android:id="@+id/button_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/answer_layout"
        android:onClick="showResult"
        android:text="@string/wrong_button" />
        
    <TextView
        android:id="@+id/quiz_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_right"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text=""
        android:layout_marginBottom="50dp" />
    
    <Button
        android:id="@+id/button_requiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/quiz_result_text"
        android:onClick="requiz"
        android:text="@string/requiz_button"
        android:visibility="invisible" />
    
 	<Button
        android:id="@+id/button_new_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/quiz_result_text"
        android:onClick="newQuiz"
        android:text="@string/new_quiz_button"
        android:visibility="invisible" />
    
    <Button
        android:id="@+id/button_go_to_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/quiz_result_text"
        android:onClick="goToList"
        android:text="@string/go_to_list_button"
        android:visibility="invisible" />
    

</RelativeLayout>
